# C-to-MIPS-Compiler

./: .gitignore  .travis.yml  1st_test.c  1st_test.cpp  CMakeLists.txt  Vagrantfile  makefile  out.py  readme.md  test  test_column  test_our  test_ref
fuzzer/: CMakeLists.txt  fuzzer.cpp
include/: ast.hpp  c_compiler.hpp  chunk.hpp  compiler.hpp  constants.hpp  context.hpp  declarations.hpp  logger_macros.hpp  rang.hpp  run.hpp  symbolTable.hpp  type.hpp  verbosity.hpp
include/ast/: ast_binop.hpp  ast_conditional.hpp  ast_declarator.hpp  ast_expression.hpp  ast_function.hpp  ast_ifstatement.hpp  ast_jump.hpp  ast_list.hpp  ast_loops.hpp  ast_node.hpp  ast_primitives.hpp  ast_statement.hpp  ast_translation.hpp  ast_unaryop.hpp  ast_variable.hpp
lexer_parser/: C_lexer.flex  C_parser.y
management/: effort-log.csv  milestones.csv  schedule.csv
src/: C_lexer.flex  C_lexer.yy.cpp  C_parser.y  C_parser2.y  C_parser_old.y  ast_binop.cpp  ast_conditional.cpp  ast_declarator.cpp  ast_function.cpp  ast_ifstatement.cpp  ast_jump.cpp  ast_list.cpp  ast_loops.cpp  ast_node.cpp  ast_primitives.cpp  ast_translation.cpp  ast_unaryop.cpp  ast_variable.cpp  c_compiler.cpp  chunk.cpp  compiler.cpp  context.cpp  print_canonical.cpp  run.cpp  test.cpp  test_lexer.cpp  type.cpp
src/implementation/: ast_function.cpp
test_deliverable/: makefile  testnames.txt
test_deliverable/test_cases/: ATOF.c  ATOF_driver.c  FOR_N.c  FOR_N_driver.c  IF_ELSE_F.c  IF_ELSE_F_driver.c  IF_ELSE_T.c  IF_ELSE_T_driver.c  IF_F.c  IF_T.c  LOCAL_ARRAY.c  LOCAL_ARRAY_driver.c  MAIN.c  SELF_RECURSION.c  (+71 more)
